# rremu

./: CMakeLists.txt  README.md
include/: base_device.h  base_mmu.h  clint.h  config.h  cpu.h  device_factory.h  elf_parser.h  mmu.h  plic.h  ram.h  trap.h  uart.h  virtio.h
scripts/: build.sh  test.sh
source/: cpu.cpp  device_factory.cpp  elf_parser.cpp  main.cpp  mmu.cpp
tests/: cpu_test.cpp  mmu_test.cpp  ram_test.cpp
